[sources] Fix incorrect fonts and spacing in Breakpoints view.
Fixed: chromium:1517301
Screenshot: https://i.imgur.com/afSveLU.png
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5185515
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/sources/components/breakpointsView.css
+++ b/front_end/panels/sources/components/breakpointsView.css
@@ -36,6 +36,7 @@ input {
 
 details {
   border-top: 1px solid var(--sys-color-divider);
+  padding: 2px 0;
 }
 
 details:not(.active) {
@@ -44,7 +45,7 @@ details:not(.active) {
 }
 
 details > summary {
-  height: 18px;
+  min-height: 20px;
   list-style: none;
   display: flex;
   padding: 0 8px 0 6px;
@@ -90,8 +91,6 @@ details[open] > summary::before {
 
 .group-header-title {
   margin-left: 4px;
-  font-weight: 500;
-  font-size: var(--source-code-font-size);
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
